--- a/doc/agile/sprint_backlog_099.org
+++ b/doc/agile/sprint_backlog_099.org
@@ -13,7 +13,7 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-20 Mon 11:19]
+#+CAPTION: Clock summary at [2017-03-20 Mon 11:35]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
@@ -23,7 +23,7 @@
 | Active                                                                      |         | 59:10 |       | 100.0 |
 | COMPLETED Sprint and product backlog grooming                               |         |       |  3:18 |   5.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.7 |
-| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   5.0 |
+| COMPLETED Add test model for all of the path meta-data                      |         |       |  2:58 |   5.0 |
 | COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |   8.6 |
 | COMPLETED Split include and source directories                              |         |       |  5:22 |   9.1 |
 | COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  14.1 |
@@ -106,7 +106,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://twitter.com/MarcoCraveiro/status/838746103579291648][Tweet]]
 - [[https://www.linkedin.com/hp/update/6244512213571248128/][LinkedIn]]
 
-*** COMPLETED Add test model for path meta-data                       :story:
+*** COMPLETED Add test model for all of the path meta-data            :story:
     CLOSED: [2017-03-06 Mon 22:15]
     CLOCK: [2017-03-06 Mon 22:10]--[2017-03-06 Mon 22:19] =>  0:09
     CLOCK: [2017-03-06 Mon 21:02]--[2017-03-06 Mon 22:09] =>  1:07
